package practica5.ejercicio1;


public class Tema {

	private String nombre;

	public Tema(String nombre){
		this.nombre = nombre;
	}
	
	public String getNombre() {
		return nombre;
	}
	
	
	
}
