@startuml ej1
skinparam ClassBackgroundColor transparent
skinparam classAttributeIconSize 0 
skinparam ClassBorderThickness 1.3
skinparam ClassBorderColor Black
skinparam ArrowColor Black
skinparam shadowing false


class Usuario{
    +addMusic()
    +removeMusic()
}
Temas <-- Usuario : 0..*

class SpOOtify{
    +buscarPorTitulo(String titulo): List<Tema>
    +buscarPorAutor(String nombre): List<Tema>
    +buscarPorAlbum(String nombre): List<Tema>
}
Autor <-u- SpOOtify : 0..*
Usuario <-u- SpOOtify : 0..*

class Autor{
    
}

class Album{

}
Album <-l- Autor : 0..*

class Tema{

}
Tema <-- Album : 0..*

@enduml